--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<main class="Accio" id="Job">
-		<p class="hello-accio-job"> Hello Accio Job</p>
+		<text class="hello-accio-job"> Hello Accio Job</text>
 		
 	</main>
     <script type="text/javascript" src="./script.js">
