--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<main class="Accio" id="Job">
-		<h3 class="hello-accio-job">Hello Accio Job</h3>
+		<p class="hello-accio-job">Hello Accio Job</p>
 		
 	</main>
     <script type="text/javascript" src="./script.js">
